--- a/style.css
+++ b/style.css
@@ -1,19 +1,84 @@
 body {
     background-color: rgb(38, 37, 37);
-    color: #ffffff;
+    color: white;
     font-family: Arial, sans-serif;
     text-align: center;
-}
-nav {
-    background-color: black;
-    margin: 20px auto;
-    padding: 10px;
-    border-radius: 10px;
-    width: 60%;
+    margin: 0;
+    padding-top: 70px;
 }
 
-h1, h2 {
+nav {
+    background-color: black;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    box-shadow: 0px 2px 5px black
+    z-index: 1000;
+}
+
+nav h1 {
+    margin: 0;
+    font-size: 24px;
     color: #55CDFC;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
+
+nav ul li {
+    margin: 0 10px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 5px;
+    background-color: #222;
+    transition: background 0.3s;
+}
+
+nav ul li a:hover {
+    background-color: #555;
+}
+
+main {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #444;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px black
+}
+
+h2 {
+    color: #55CDFC;
+}
+
+h3 {
+    color: #f7a8b8;
+}
+
+ol {
+    text-align: left;
+    padding-left: 20px;
+    background: #222;
+    border-radius: 10px;
+    padding: 15px;
+}
+
+ol li {
+    margin-bottom: 10px;
 }
 
 #milestones {
@@ -27,7 +92,7 @@ h1, h2 {
 #countdown {
     margin: 20px auto;
     padding: 10px;
-    background-color: #ffffff;
+    background-color: white;
     color: black;
     border-radius: 10px;
     width: 60%;
@@ -54,3 +119,4 @@ ul {
     background-color: #55CDFC;
     transition: width 0.5s ease-in-out;
 }
+
