--- a/style.css
+++ b/style.css
@@ -18,8 +18,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
-    box-shadow: 0px 2px 5px black
-    z-index: 1000;
+    box-shadow: 0px 2px 5px black;
 }
 
 nav h1 {
