--- a/style.css
+++ b/style.css
@@ -70,10 +70,12 @@ h3 {
 
 ol {
     text-align: left;
-    padding-left: 20px;
     background: #222;
     border-radius: 10px;
-    padding: 15px;
+    padding-left: 4em;
+    padding-right: 4em;
+    padding-bottom: 2em;
+    padding-top: 2em;
 }
 
 ol li {
